--- a/src/ForceGame.Core/ForceGame.Core.csproj
+++ b/src/ForceGame.Core/ForceGame.Core.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+			<TargetFramework>netstandard2.1</TargetFramework>
+			<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+			<AssemblyName>ForceGame.Core</AssemblyName>
+			<OutputType>Library</OutputType>
   </PropertyGroup>
 
 </Project>
